[project]
name = "korrektor"
version = "0.1.0"
description = "A Python package for automated code refactoring and optimization."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.4.4",
    "streamlit>=1.41.0",
    "streamlit-monaco>=0.1.3"
]

[project.authors]
name = "Torben Haack"
email = "tohaack@pm.me"

[project.urls]
homepage = "https://github.com/trbndev/korrektor"
repository = "https://github.com/trbndev/korrektor.git"
documentation = "https://github.com/trbndev/korrektor"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"